--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 url = "2.2"
 reqwest = { version = "0.11", features = ["json"] }
-dotenv = "0.15"
-tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.19", features = ["rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha256 = "1.0"
