--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 url = "2.2"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.19", features = ["rt-multi-thread"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = "1.0"
 sha256 = "1.0"
+
+[features]
+serde = ["dep:serde", "url/serde"]
