--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-url = "2.2"
+url = { version = "2.2", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1.19", features = ["rt-multi-thread"] }
-serde = { version = "1.0", features = ["derive"], optional = true }
+tokio = { version = "1.20", features = ["rt-multi-thread"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha256 = "1.0"
-
-[features]
-serde = ["dep:serde", "url/serde"]
